# fluxlog

./: .gitignore  CMakeLists.txt  README.md
cmake/: fluxlogConfig.cmake.in
include/fluxlog/: log_level.hpp  log_record.hpp  logger.hpp
include/fluxlog/formatter/: i_formatter.hpp  simple_formatter.hpp
include/fluxlog/sink/: base_sink.hpp  console_sink.hpp  file_sink.hpp  i_sink.hpp
src/: logger.cpp
src/formatter/: simple_formatter.cpp
src/sink/: console_sink.cpp
tests/: CMakeLists.txt  main.cpp
